--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: 'Monospace';
+    src: url('./assets/fonts/Monospace.ttf') format('truetype'),
+      url('./assets/fonts/Monospace.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+  }
+}
